; ModuleID = '/home/carl/AnghaBench/zstd/contrib/experimental_dict_builders/randomDictBuilder/extr_random.c_RANDOM_selectSegment.c'
source_filename = "/home/carl/AnghaBench/zstd/contrib/experimental_dict_builders/randomDictBuilder/extr_random.c_RANDOM_selectSegment.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, i32 }
%struct.TYPE_5__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64, i64)* @RANDOM_selectSegment to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @RANDOM_selectSegment(i64 %0, i64 %1) #0 {
  %3 = alloca %struct.TYPE_6__, align 4
  %4 = alloca %struct.TYPE_5__, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 0
  store i64 %1, i64* %8, align 8
  store i64 %0, i64* %5, align 8
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  store i64 %10, i64* %6, align 8
  %11 = call i64 (...) @rand()
  %12 = load i64, i64* %5, align 8
  %13 = load i64, i64* %6, align 8
  %14 = sub i64 %12, %13
  %15 = add i64 %14, 1
  %16 = urem i64 %11, %15
  %17 = trunc i64 %16 to i32
  store i32 %17, i32* %7, align 4
  %18 = load i32, i32* %7, align 4
  %19 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %3, i32 0, i32 0
  store i32 %18, i32* %19, align 4
  %20 = load i32, i32* %7, align 4
  %21 = zext i32 %20 to i64
  %22 = load i64, i64* %6, align 8
  %23 = add i64 %21, %22
  %24 = sub i64 %23, 1
  %25 = trunc i64 %24 to i32
  %26 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %3, i32 0, i32 1
  store i32 %25, i32* %26, align 4
  %27 = bitcast %struct.TYPE_6__* %3 to i64*
  %28 = load i64, i64* %27, align 4
  ret i64 %28
}

declare dso_local i64 @rand(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
